--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=weather-app
 
-weather.api.key = 5c4fc29ec3502952aa4a72ef611b1812
-geo.api.key = ac9f9725c657c67881d12c7d4f76a651
+weather.api.key = API_KEY
 weather.api.base-url=http://api.openweathermap.org
 
